fix: aligned styles

--- a/app/components/pipeline-start/styles.scss
+++ b/app/components/pipeline-start/styles.scss
@@ -22,7 +22,31 @@ button.start-with-parameters-button {
   padding-right: 20px;
 }
 
+.start-with-parameters-menu {
+  float: initial;
+  right: -25px;
+  width: auto;
+  left: auto;
+  padding-top: 35px;
+
+  &:after {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #959595;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    content: 'Start pipeline with parameters';
+  }
+}
+
 .start-with-parameters-form {
   min-width: 300px;
   padding: 5px 10px;
+
+  .btn-group {
+    padding-left: 38%;
+  }
 }
